# fastapi-todo-app

./: .gitignore  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml  test.db
alembic/versions/: 7c91c7810deb_create_phone_number_for_user_column.py
routers/: admin.py  auth.py  todos.py  users.py
test/: test_admin.py  test_auth.py  test_exemple.py  test_main.py  test_todo.py  test_users.py  utils.py
